Fixed a bunch of errors related to object references not being persistent: false when their source objects were serializable: false.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -27,7 +27,7 @@ properties: {
 			x:x, y:y,
 			zorder: lib.zorder.get('interior_back_wall_decor'),
 		})",
-		serializable: false,
+		persistent: false,
 	},
 
 	underlay_obj: {
@@ -36,6 +36,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	top_obj: {
 		type: "obj acid_controller.top",
@@ -43,6 +44,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 
 #-------------------------- constructors --------------------------#
