--- a/data/objects/effects/liquids/acid_deadly_controller.cfg
+++ b/data/objects/effects/liquids/acid_deadly_controller.cfg
@@ -25,7 +25,7 @@ properties: {
 			x:x, y:y,
 			zorder: lib.zorder.get('interior_back_wall_decor'),
 		})",
-		serializable: false,
+		persistent: false,
 	},
 
 	underlay_obj: {
@@ -34,6 +34,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	top_obj: {
 		type: "obj acid_deadly_controller.top",
@@ -41,6 +42,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 
 
