--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -21,7 +21,7 @@ properties: {
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})",
-		serializable: false,
+		persistent: false,
 	},
 
 	underlay_obj: {
@@ -30,6 +30,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	top_obj: {
 		type: "obj water_controller.top",
@@ -37,6 +38,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	lights_obj: {
 		type: "obj water_controller.lights",
@@ -44,6 +46,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	lights_transverse_obj: {
 		type: "obj water_controller.lights",
@@ -52,6 +55,7 @@ properties: {
 				time_to_die: 50,
 				_timeshift: 1.4,
 			})",
+		persistent: false,
 	},
 
 
