--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -20,7 +20,7 @@ properties: {
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})",
-		serializable: false,
+		persistent: false,
 	},
 
 	underlay_obj: {
@@ -29,6 +29,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	lights_obj: {
 		type: "obj water_controller_ocean.lights",
@@ -36,6 +37,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	lights_transverse_obj: {
 		type: "obj water_controller_ocean.lights",
@@ -44,6 +46,7 @@ properties: {
 				time_to_die: 50,
 				_timeshift: 1.4,
 			})",
+		persistent: false,
 	},
 
 
