--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -21,6 +21,7 @@ properties: {
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})"
+		persistent: false,
 	},
 	water_churn: { 
 		type: "obj particle_attache", 
@@ -31,7 +32,7 @@ properties: {
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})",
-		serializable: false,
+		persistent: false,
 	},
 
 
@@ -42,6 +43,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 	top_obj: {
 		type: "obj whitewater_controller.top",
@@ -49,6 +51,7 @@ properties: {
 				parent: me,
 				time_to_die: 50,
 			})",
+		persistent: false,
 	},
 
 
