--- a/data/objects/enemies/bugs/hortlebort_grey.cfg
+++ b/data/objects/enemies/bugs/hortlebort_grey.cfg
@@ -25,7 +25,16 @@ properties: {
 	
 #-------------------------- cosmetics --------------------------#
 	
-	body_particles: { type: "obj particle_attache", init: "object('particle_attache',x,y, {_particle_type:'hortlebort', relative_y: 20, parent: me, time_to_die: 60})" },
+	body_particles: {
+		type: "obj particle_attache",
+		init: "object('particle_attache',x,y, {
+			_particle_type:'hortlebort',
+			relative_y: 20,
+			parent: me,
+			time_to_die: 60
+		})",
+		persistent: false,
+	},
 },
 
 on_timer: "[proto_event('ant_flying', 'timer'), if(animation = 'fly', [
@@ -116,7 +125,16 @@ object_type: [
 			spawn('particle_attache',x,y, {_particle_type:'hortlebort_burst', relative_y: 0, parent: me, time_to_die: 150}),
 
 		]",			
-		contrail_particles: { type: "obj particle_attache", init: "object('particle_attache',x,y, {_particle_type:'hortlebort_shot_contrail', relative_y: 0, parent: me, time_to_die: 150})" },
+		contrail_particles: {
+			type: "obj particle_attache",
+			init: "object('particle_attache',x,y, {
+				_particle_type:'hortlebort_shot_contrail',
+				relative_y: 0,
+				parent: me,
+				time_to_die: 150
+			})",
+			persistent: false,
+		},
 	},
 	
 	
