--- a/data/objects/props-interactive/misc/teleport_pedestal.cfg
+++ b/data/objects/props-interactive/misc/teleport_pedestal.cfg
@@ -33,6 +33,7 @@ properties: {
 				mid_y: -22,
 			},
 		})",
+		persistent: false,
 	},
 
 	particles_thin: { type: "obj particle_attache", init: "object('particle_attache', {
@@ -46,6 +47,7 @@ properties: {
 				mid_y: -22,
 			},
 		})",
+		persistent: false,
 	},
 
 },
