--- a/data/objects/props-interactive/misc/world_map_pedestal.cfg
+++ b/data/objects/props-interactive/misc/world_map_pedestal.cfg
@@ -17,7 +17,7 @@ properties: {
 	material_sound: "enum stone",
 	particle_amount: "150",
 #-------------------------- vars --------------------------#
-	_glow: { type: "obj teleport_pedestal.glow_mask", init: "object('teleport_pedestal.glow_mask',img_mid_x,img_mid_y,facing)", persistent: false },
+	_glow: { type: "obj world_map_pedestal.glow_mask", init: "object('world_map_pedestal.glow_mask',img_mid_x,img_mid_y,facing)", persistent: false },
 	_last_stood_on: { type: "int", default: -100, persistent: false },
 	_glowing: { type: 'bool', default: false, persistent: false, },
 
@@ -34,6 +34,7 @@ properties: {
 				mid_y: -22,
 			},
 		})",
+		persistent: false,
 	},
 
 	particles_thin: { type: "obj particle_attache", init: "object('particle_attache', {
@@ -47,6 +48,7 @@ properties: {
 				mid_y: -22,
 			},
 		})",
+		persistent: false,
 	},
 
 },
