Fixed a few attache-related things.

--- a/data/object_prototypes/enemies_specialized/gazerlet.cfg
+++ b/data/object_prototypes/enemies_specialized/gazerlet.cfg
@@ -85,18 +85,28 @@ properties: {
 	_glow: {
 		type: "obj effects_attache_glow_source",
 		init: "object('effects_attache_glow_source', mid_x, mid_y, {
-						time_to_die: 0,
-						parent: me,
-						flicker_type: enum window_light,
-						graphics: enum gazer_flare,
-						scale_factor: 0.20,
-						base_alpha: 60,
-						zorder: me.zorder,
-						zsub_order: 1,
-					})",
+			time_to_die: 0,
+			parent: me,
+			flicker_type: enum window_light,
+			graphics: enum gazer_flare,
+			scale_factor: 0.20,
+			base_alpha: 60,
+			zorder: me.zorder,
+			zsub_order: 1,
+		})",
+		persistent: false,
 	},
 
-	my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'gazerlet_red_contrail', parent: me, time_to_die: 20, zorder: me.zorder - 1})", },
+	my_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
+			_particle_type: 'gazerlet_red_contrail',
+			parent: me,
+			time_to_die: 20,
+			zorder: me.zorder - 1
+		})",
+		persistent: false,
+	},
 
 	aggro_particles: {
 		type: "obj legacy_particle_attache",
