Further progress towards procedural squishing.  Got an object transforming its draw size when stepped on.

--- a/data/objects/experimental/test_squishy_collider.cfg
+++ b/data/objects/experimental/test_squishy_collider.cfg
@@ -12,39 +12,56 @@ id: "test_squishy_collider",
 		_last_squished: { type:"int", default: 0 },
 		springiness: "1",
 		
-		set_squish: "def(decimal scale) -> commands
+		set_squish: "commands ::
 			set(custom_draw, [0.0,1.0,2.0,3.0,
 				[
-					mag * ( 1.0 - scale),
-					mag * ( 1.0 - scale)
+					mag * ( 1.0 - squish_progress),
+					mag * ( 1.0 - squish_progress)
 				],
 				[
-					mag * (-1.0 + scale),
-					mag * ( 1.0 - scale)
+					mag * (-1.0 + squish_progress),
+					mag * ( 1.0 - squish_progress)
 				],
 				[
-					mag * (-1.0 + scale),
-					mag * (-1.0 + scale)
+					mag * (-1.0 + squish_progress),
+					mag * (-1.0 + squish_progress)
 				],
 				[
-					mag * ( 1.0 - scale),
-					mag * (-1.0 + scale)
+					mag * ( 1.0 - squish_progress),
+					mag * (-1.0 + squish_progress)
 				]
 			]) where mag = 50.0",
 
-		
+		squish_progress: { type: "decimal", init: "1.0" },		
+
+		trigger_squish: "commands :: 
+						if(level.cycle - _last_squished > 25,
+							[
+								set(_last_squished, level.cycle),
+								animate(me,
+									{
+										squish_progress: 0.0
+									},
+									{
+										duration: 25,
+										easing: lib.math.ease_in_out_sine,
+										on_complete: [set(squish_progress, 1.0)],
+									}
+								),
+							]
+						)",
 
 	},
 	on_create: "",
 
-	on_bounced_on: "[set(_last_squished, level.cycle), debug('bounced_on')]",
+	on_bounced_on: "[trigger_squish, debug('bounced_on')]",
 
 	on_collide_head: "[set(_last_squished, level.cycle), debug('collide_head')]",
 	on_collide_side: "[set(_last_squished, level.cycle), debug('collide_side')]",
 	on_collide_feet: "[set(_last_squished, level.cycle), debug('collide_feet')]",
 	
 	
-	on_process: "if(true, set_squish(0.5))",
+	on_process: "set_squish",
 
 	animation: {
 		id: "normal",
