Further progress towards procedural squishing.  Heavily tuned the easing functions.

--- a/data/objects/experimental/test_squishy_collider.cfg
+++ b/data/objects/experimental/test_squishy_collider.cfg
@@ -10,7 +10,7 @@ id: "test_squishy_collider",
 	//has_feet: false,
 	properties: {
 		_last_squished: { type:"int", default: 0 },
-		springiness: "1",
+		springiness: "100",
 		
 		set_squish: "commands ::
 			set(custom_draw, [0.0,1.0,2.0,3.0,
@@ -30,12 +30,12 @@ id: "test_squishy_collider",
 					mag * ( 1.0 - squish_progress),
 					mag * (-1.0 + squish_progress)
 				]
-			]) where mag = 50.0",
+			]) where mag = 30.0",
 
 		squish_progress: { type: "decimal", init: "1.0" },		
 
 		trigger_squish: "commands :: 
-						if(level.cycle - _last_squished > 25,
+						if(level.cycle - _last_squished > 45,
 							[
 								set(_last_squished, level.cycle),
 								animate(me,
@@ -43,13 +43,23 @@ id: "test_squishy_collider",
 										squish_progress: 0.0
 									},
 									{
-										duration: 25,
-										easing: lib.math.ease_in_out_sine,
-										on_complete: [set(squish_progress, 1.0)],
+										duration: 15,
+										easing: lib.math.ease_in_sine,
+										on_complete: reverse_squish_animation,
 									}
 								),
 							]
 						)",
+
+		reverse_squish_animation: "animate(me,
+			{
+				squish_progress: 1.0
+			},
+			{
+				duration: 30,
+				easing: lib.math.ease_out_elastic,
+			}
+		)",
 
 	},
 	on_create: "",
