Anchored the bounce so the bottom doesn't move.

--- a/data/objects/experimental/test_squishy_collider.cfg
+++ b/data/objects/experimental/test_squishy_collider.cfg
@@ -10,25 +10,25 @@ id: "test_squishy_collider",
 	//has_feet: false,
 	properties: {
 		_last_squished: { type:"int", default: 0 },
-		springiness: "100",
+		springiness: "175",
 		
 		set_squish: "commands ::
 			set(custom_draw, [0.0,1.0,2.0,3.0,
 				[
-					mag * ( 1.0 - squish_progress),
-					mag * ( 1.0 - squish_progress)
+					mag * ( 1.0 - squish_progress) * (-0.4),
+					mag * ( 1.0 - squish_progress) * (1.5)
 				],
 				[
-					mag * (-1.0 + squish_progress),
-					mag * ( 1.0 - squish_progress)
+					mag * (-1.0 + squish_progress) * (-0.4),
+					mag * ( 1.0 - squish_progress) * (1.5)
 				],
 				[
-					mag * (-1.0 + squish_progress),
-					mag * (-1.0 + squish_progress)
+					0.0,
+					0.0
 				],
 				[
-					mag * ( 1.0 - squish_progress),
-					mag * (-1.0 + squish_progress)
+					0.0,
+					0.0
 				]
 			]) where mag = 30.0",
 
@@ -64,7 +64,7 @@ id: "test_squishy_collider",
 	},
 	on_create: "",
 
-	on_bounced_on: "[trigger_squish, debug('bounced_on')]",
+	on_bounced_on: "[trigger_squish]",
 
 	on_collide_head: "[set(_last_squished, level.cycle), debug('collide_head')]",
 	on_collide_side: "[set(_last_squished, level.cycle), debug('collide_side')]",
