--- a/data/objects/experimental/test_squishy_collider.cfg
+++ b/data/objects/experimental/test_squishy_collider.cfg
@@ -9,69 +9,68 @@ id: "test_squishy_collider",
 
 	//has_feet: false,
 	properties: {
-		_last_squished: { type:"int", default: 0 },
+		_last_triggered_squish_animation: { type:"int", default: 0 },
 		springiness: "175",
 		
-		set_squish: "commands ::
+		set_squish_animation_draw_bounds: "commands ::
 			set(custom_draw, [0.0,1.0,2.0,3.0,
 				[
-					mag * ( 1.0 - squish_progress) * (-0.6),
-					mag * ( 1.0 - squish_progress) * (1.6)
+					mag * ( 1.0 - squish_animation_progress) * (-0.6),
+					mag * ( 1.0 - squish_animation_progress) * (1.6)
 				],
 				[
-					mag * (-1.0 + squish_progress) * (-0.6),
-					mag * ( 1.0 - squish_progress) * (1.6)
+					mag * (-1.0 + squish_animation_progress) * (-0.6),
+					mag * ( 1.0 - squish_animation_progress) * (1.6)
 				],
 				[
-					mag * (-1.0 + squish_progress) * (-0.3),
+					mag * (-1.0 + squish_animation_progress) * (-0.3),
 					0.0
 				],
 				[
-					mag * ( 1.0 - squish_progress) * (-0.3),
+					mag * ( 1.0 - squish_animation_progress) * (-0.3),
 					0.0
 				]
 			]) where mag = 30.0",
 
-		squish_progress: { type: "decimal", init: "1.0" },		
+		squish_animation_progress: {
+			type: "decimal",
+			init: "1.0",
+			get: "_data",
+			set: "[set(_data,value), set_squish_animation_draw_bounds]",
+		},
 
-		trigger_squish: "commands :: 
-						if(level.cycle - _last_squished > 30,
-							[
-								set(_last_squished, level.cycle),
-								animate(me,
-									{
-										squish_progress: 0.0
-									},
-									{
-										duration: 10,
-										easing: lib.math.ease_in_sine,
-										on_complete: reverse_squish_animation,
-									}
-								),
-							]
-						)",
+		trigger_squish_animation: "commands :: 
+			if(level.cycle - _last_triggered_squish_animation > 30,
+				[
+					set(_last_triggered_squish_animation, level.cycle),
+					animate(me,
+						{
+							squish_animation_progress: 0.0
+						},
+						{
+							duration: 10,
+							easing: lib.math.ease_in_sine,
+							on_complete: reverse_squish_animation,
+						}
+					),
+				]
+			)",
 
 		reverse_squish_animation: "animate(me,
 			{
-				squish_progress: 1.0
+				squish_animation_progress: 1.0
 			},
 			{
 				duration: 20,
 				easing: lib.math.ease_out_elastic,
 			}
 		)",
-
 	},
-	on_create: "",
 
-	on_bounced_on: "[trigger_squish]",
 
-	on_collide_head: "[set(_last_squished, level.cycle), debug('collide_head')]",
-	on_collide_side: "[set(_last_squished, level.cycle), debug('collide_side')]",
-	on_collide_feet: "[set(_last_squished, level.cycle), debug('collide_feet')]",
-	
-	
-	on_process: "set_squish",
+	on_bounced_on: "[trigger_squish_animation]",
+
+
 
 	animation: {
 		id: "normal",
