Changed from using a hard-coded value for the squish dimensions and instead directly read in the size of the current frame.

--- a/data/objects/experimental/test_squishy_collider.cfg
+++ b/data/objects/experimental/test_squishy_collider.cfg
@@ -30,7 +30,14 @@ id: "test_squishy_collider",
 					mag * ( 1.0 - squish_animation_progress) * (-0.3),
 					0.0
 				]
-			]) where mag = 30.0",
+			]) where mag = min(me.img_w/2.0, me.img_h/2.0)",
+		
+		/*
+			The draw area is done not via a normalized fraction (0.0 -> 1.0), but is done via direct pixel numbers.  Because of this, since we want to convert over to using a fraction, so that this works on any piece of art, we need to set the `mag` (magnitude) value to something appropriate (if it is less than the graphic's dimensions, it's relatively harmless; it just won't fully compress.  However, if it's more than the graphic's dimensions, it'll actually move the x1 value past the x2 one, and we'll essentially get a spatially inverted graphic, which sometimes leads to weird drawing errors (like the final shape being an hourglass shape).
+			
+			As such, we're grabbing the smaller value of img_w and img_h; whichever one won't distort the shape by overflowing.
+		*/
+			
 
 		squish_animation_progress: {
 			type: "decimal",
