Moved the whole procedural squish effect over to one of the base prototypes.  Wired it in on the bed for the time being, even though it's a bit wonky.

--- a/data/objects/props/furniture/wooden_bed.cfg
+++ b/data/objects/props/furniture/wooden_bed.cfg
@@ -14,7 +14,12 @@ properties: {
 	spring_amount: 1500,
 	material_sound: "enum padding",
 },
-	on_bounced_on: "[sound('bed-jump'+1d4+'.wav'),sound('footstep-jump-padding'+1d7+'.wav')]",
+
+on_bounced_on: "[
+	sound('bed-jump'+1d4+'.wav'),
+	sound('footstep-jump-padding'+1d7+'.wav'),
+	trigger_squish_animation,
+]",
 	
 animation: {
 	id: "normal",
