--- a/data/objects/props/utilities/potbelly_stove.cfg
+++ b/data/objects/props/utilities/potbelly_stove.cfg
@@ -15,15 +15,16 @@ properties: {
 	_fire_glow: {
 				type: "obj effects_attache_glow_source",
 				init: "object('effects_attache_glow_source', mid_x, mid_y, {
-								time_to_die: 0,
-								parent: me,
-								custom_relative_pos_default: {mid_x: 0,	mid_y: 10},
-								base_alpha: 160,
-								flicker_type: enum sputter,
-								graphics: enum firey,
-								scale_factor: 0.05,
-								zorder: 5000,
-							})",
+					time_to_die: 0,
+					parent: me,
+					custom_relative_pos_default: {mid_x: 0,	mid_y: 10},
+					base_alpha: 160,
+					flicker_type: enum sputter,
+					graphics: enum firey,
+					scale_factor: 0.05,
+					zorder: 5000,
+				})",
+				persistent: false,
 			},
 
 	epihittable_obj_constructor: "[
