Retuned and parameterized the squishing/bouncing effect so that it plays nice with sprites that don't have their opaque parts flush with the absolute bottom of the sprite frame.  Put this through the paces on the wooden bed.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -312,26 +312,57 @@
 		*/
 
 		_last_triggered_squish_animation: { type:"int", default: 0 },
+		_custom_squish_animation_baseline: "decimal :: 1.0",
+		_custom_squish_animation_magnitude: "decimal :: 1.0",
 
-		set_squish_animation_draw_bounds: "commands ::
-			set(custom_draw, [0.0,1.0,2.0,3.0,
-				[
-					magnitude * ( 1.0 - squish_animation_progress) * (-0.6),
-					magnitude * ( 1.0 - squish_animation_progress) * (1.6)
-				],
-				[
-					magnitude * (-1.0 + squish_animation_progress) * (-0.6),
-					magnitude * ( 1.0 - squish_animation_progress) * (1.6)
-				],
-				[
-					magnitude * (-1.0 + squish_animation_progress) * (-0.3),
-					0.0
-				],
-				[
-					magnitude * ( 1.0 - squish_animation_progress) * (-0.3),
-					0.0
-				]
-			]) where magnitude = min(me.img_w/2.0, me.img_h/2.0)",
+		set_squish_animation_draw_bounds: "commands :: 
+			if(_custom_squish_animation_baseline != 1.0,
+				/*
+					If the actual opaque-pixels of the graphic that comprises the sprite is not absolutely flush with the 'baseline' (the very bottom of the animation frame) and is, in fact, rather high up in the sprite, as is usually the case, then this whole animation will look rather strange.  In this case, we want to use a more complicated version that tries to anchor the unmoving portion of the animation higher than the very bottom.
+				*/  
+				set(custom_draw, [0.0, 1.0, 1.0 + _custom_squish_animation_baseline, 2.0, 3.0, 
+					[
+						magnitude * ( 1.0 - squish_animation_progress) * (-0.6),
+						magnitude * ( 1.0 - squish_animation_progress) * (1.6)
+					],
+					[
+						magnitude * (-1.0 + squish_animation_progress) * (-0.6),
+						magnitude * ( 1.0 - squish_animation_progress) * (1.6)
+					],
+					[
+						magnitude * (-1.0 + squish_animation_progress) * (-0.3),
+						0.0
+					],
+					[
+						magnitude * (-1.0 + squish_animation_progress) * (-0.3),
+						0.0
+					],
+					[
+						magnitude * ( 1.0 - squish_animation_progress) * (-0.3),
+						0.0
+					]
+				]),			
+			
+				set(custom_draw, [0.0,1.0,2.0,3.0,
+					[
+						magnitude * ( 1.0 - squish_animation_progress) * (-0.6),
+						magnitude * ( 1.0 - squish_animation_progress) * (1.6)
+					],
+					[
+						magnitude * (-1.0 + squish_animation_progress) * (-0.6),
+						magnitude * ( 1.0 - squish_animation_progress) * (1.6)
+					],
+					[
+						magnitude * (-1.0 + squish_animation_progress) * (-0.3),
+						0.0
+					],
+					[
+						magnitude * ( 1.0 - squish_animation_progress) * (-0.3),
+						0.0
+					]
+				])
+			
+			) where magnitude = min(me.img_w/2.0, me.img_h/2.0) * _custom_squish_animation_magnitude",
 		
 		/*
 			The draw area is done not via a normalized fraction (0.0 -> 1.0), but is done via direct pixel numbers.  Because of this, since we want to convert over to using a fraction, so that this works on any piece of art, we need to set the `magnitude` value to something appropriate (if it is less than the graphic's dimensions, it's relatively harmless; it just won't fully compress.  However, if it's more than the graphic's dimensions, it'll actually move the x1 value past the x2 one, and we'll essentially get a spatially inverted graphic, which sometimes leads to weird drawing errors (like the final shape being an hourglass shape).
