--- a/data/objects/props/furniture/wooden_bed.cfg
+++ b/data/objects/props/furniture/wooden_bed.cfg
@@ -13,6 +13,8 @@ properties: {
 	springiness: 1,
 	spring_amount: 1500,
 	material_sound: "enum padding",
+	_custom_squish_animation_baseline: "decimal :: 0.6",
+	_custom_squish_animation_magnitude: "decimal :: 0.2",
 },
 
 on_bounced_on: "[
