Fixed the red mushroom spore shooter's solid area; this will cause some breakage in existing levels, but any such breakage will cause an assert, so we don't need to worry about forgetting this.

--- a/data/objects/enemies/mushrooms/mushroom_shooter_red.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_shooter_red.cfg
@@ -5,6 +5,8 @@ editor_info: {
 	category: "enemies, forest",
 },
 
+solid_area: [8,17,23,32],
+
 properties: {
 	taxonomy: "TaxonomyType :: enum mushroom",
 	
@@ -47,7 +49,7 @@ animation: [
 	},
 	{
 		id: "stand",
-		rect: [1,84,31,120],
+		rect: [137,41,167,77],
 		frames: 1,
 		duration: 6,
 	},
