Added a spawner for the mushroom walkers, and made them use the bounce effect when they hit the ground.

--- a/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
@@ -15,6 +15,11 @@ properties: {
 	taste: "~Bubble tea!~",
 	
 	physical_size: "32",
+	turns_at_cliffs: "false",
+
+
+	_custom_squish_animation_baseline: "decimal :: 0.6",
+	_custom_squish_animation_magnitude: "decimal :: 0.6",
 	
 #-------------------------- vars --------------------------#
 	attack_counter: { type: "int", default: 0 },
@@ -22,7 +27,7 @@ properties: {
 
 hitpoints: 200,
 
-
+on_boing: "[trigger_squish_animation]",
 
 
 on_timer: "[set(rotate, slope_standing_on/3), if(is_standing and animation in ['walk','run'] and (should_turn_away_from_cliff or should_turn_towards_player),turn_around,null)]",
@@ -58,9 +63,10 @@ animation: [
 	},
 	{
 		id: "spring",
-		rect: [1,84,31,120],
+		rect: [137,41,167,77],
 		frames: 1,
-		duration: 6,
+		duration: 15,
+		events: "1:boing",
 	},
 	{
 		id: "walk",
