Implementing a test case for bouncing on hitting the ground.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -370,6 +370,10 @@
 			As such, we're grabbing the smaller value of img_w and img_h; whichever one won't distort the shape by overflowing.
 		*/
 			
+		squish_animation_duration: "{ intro: int, outro: int } :: {
+			intro: 10,
+			outro: 20,
+		}",
 
 		squish_animation_progress: {
 			type: "decimal",
@@ -379,7 +383,7 @@
 		},
 
 		trigger_squish_animation: "commands :: 
-			if(level.cycle - _last_triggered_squish_animation > 30,
+			if(level.cycle - _last_triggered_squish_animation > squish_animation_duration.intro + squish_animation_duration.outro,
 				[
 					set(_last_triggered_squish_animation, level.cycle),
 					animate(me,
@@ -387,8 +391,8 @@
 							squish_animation_progress: 0.0
 						},
 						{
-							duration: 10,
-							easing: lib.math.ease_in_sine,
+							duration: squish_animation_duration.intro,
+							easing: lib.math.ease_out_sine,
 							on_complete: reverse_squish_animation,
 						}
 					),
@@ -400,7 +404,7 @@
 				squish_animation_progress: 1.0
 			},
 			{
-				duration: 20,
+				duration: squish_animation_duration.outro,
 				easing: lib.math.ease_out_elastic,
 			}
 		)",
