--- a/data/object_prototypes/enemies/movable_enemy.cfg
+++ b/data/object_prototypes/enemies/movable_enemy.cfg
@@ -108,7 +108,14 @@ on_collide_head: "	if(collide_with is obj hittable,
 					
 on_collide_feet: "	if(collide_with is obj hittable, 
 						elastic_collision(collide_with, {multiplier: 1.1, constraint: {min: 50, max: 1000}}),
-						if(abs(velocity_y) > 200 and feet_are_bouncy, [attempt_animation('spring', default_anim),set(velocity_y, -velocity_y/4)], set(velocity_y, 0))
+						if(abs(velocity_y) > 450 and feet_are_bouncy,
+							[
+								attempt_animation('spring', default_anim),
+								set(velocity_y, 0),
+								schedule( 7 + 2, set(velocity_y, -velocity_y/2)),
+							],
+							set(velocity_y, 0)
+						)
 					) where collide_with = arg.collide_with",
 
 on_bounced_on: "[sound('bug-bounce.wav'),attempt_animation('spring', default_anim)]",
