--- a/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
@@ -20,6 +20,12 @@ properties: {
 
 	_custom_squish_animation_baseline: "decimal :: 0.6",
 	_custom_squish_animation_magnitude: "decimal :: 0.6",
+
+	squish_animation_duration: "{ intro: int, outro: int } :: {
+		intro: 7,
+		outro: 15,
+	}",
+
 	
 #-------------------------- vars --------------------------#
 	attack_counter: { type: "int", default: 0 },
@@ -44,8 +50,14 @@ animation: [
 		attack_area: [6,17,26,35],
 	},
 	{
-		id: "stand",
+		id: "normal",
 		rect: [137,41,167,77],
+		frames: 1,
+		duration: 6,
+	},
+	{
+		id: "stand",
+		rect: [1,1,31,37],
 		frames: 1,
 		duration: 6,
 	},
@@ -63,9 +75,10 @@ animation: [
 	},
 	{
 		id: "spring",
-		rect: [137,41,167,77],
+		rect: [1,1,31,37],
 		frames: 1,
 		duration: 15,
+		accel_x: 140,
 		events: "1:boing",
 	},
 	{
