Upgraded the procedural squish animation to allow for a dynamic magnitude based on how strong the triggering incident is.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -304,23 +304,24 @@
 					
 #-------------------------- procedural squishing animation --------------------------#
 		/*
-			This is a set of properties to modify the draw area, which are meant to imitate what happens when i.e. an ant gets jumped on.
-			
-			The main purpose is to make this available to everything, so we no longer have to manually draw custom animations for it.
-			
-			Note, of course, that this will interfere/conflict if anything else is trying to modify the draw area at the same time, most likely via a "last come, only served" setup.
+			This is a set of properties to modify the draw area, which are meant to imitate classic, disney-style "stretch and squish" animations.  We frequently have spring-like objects the player can jump on, which includes most enemies like ants and kitties.   We also often have this behavior trigger when an object hits the ground with force, to give it better kinematics.   The main purpose of building this is that, in the past, we've made some of these animations by hand, but it's very labor-intensive, and it's also quite inflexible - each animation we make, strictly, has only one fixed, pre-drawn amount of bounce.  By making this procedural, everything has access to it almost for free (it does, regrettably, take a little bit of tuning to work well), and it's also able to flexibly apply different amounts of bounce depending on how hard the impact is.
+
+			Caveats:
+			- this will interfere/conflict if anything else is trying to modify the draw area at the same time, most likely via a "last come, only served" setup.
+			- this is ONLY currently for vertical animations, with the "fulcrum (still point)" of motion being the feet.
 		*/
 
 		_last_triggered_squish_animation: { type:"int", default: 0 },
-		_custom_squish_animation_baseline: "decimal :: 1.0",
-		_custom_squish_animation_magnitude: "decimal :: 1.0",
+		_magnitude_coefficient_for_current_anim: { type:"decimal", default: 1.0 },
+		object_squish_animation_baseline: "decimal :: 1.0",
+		object_squish_animation_magnitude: "decimal :: 1.0",
 
 		set_squish_animation_draw_bounds: "commands :: 
-			if(_custom_squish_animation_baseline != 1.0,
+			if(object_squish_animation_baseline != 1.0,
 				/*
 					If the actual opaque-pixels of the graphic that comprises the sprite is not absolutely flush with the 'baseline' (the very bottom of the animation frame) and is, in fact, rather high up in the sprite, as is usually the case, then this whole animation will look rather strange.  In this case, we want to use a more complicated version that tries to anchor the unmoving portion of the animation higher than the very bottom.
 				*/  
-				set(custom_draw, [0.0, 1.0, 1.0 + _custom_squish_animation_baseline, 2.0, 3.0, 
+				set(custom_draw, [0.0, 1.0, 1.0 + object_squish_animation_baseline, 2.0, 3.0, 
 					[
 						magnitude * ( 1.0 - squish_animation_progress) * (-0.6),
 						magnitude * ( 1.0 - squish_animation_progress) * (1.6)
@@ -361,14 +362,15 @@
 						0.0
 					]
 				])
-			
-			) where magnitude = min(me.img_w/2.0, me.img_h/2.0) * _custom_squish_animation_magnitude",
+
+			/*
+				The draw area is done not via a normalized fraction (0.0 -> 1.0), but is done via direct pixel numbers.  Because of this, since we want to convert over to using a fraction, so that this works on any piece of art, we need to set the `magnitude` value to something appropriate (if it is less than the graphic's dimensions, it's relatively harmless; it just won't fully compress.  However, if it's more than the graphic's dimensions, it'll actually move the x1 value past the x2 one, and we'll essentially get a spatially inverted graphic, which sometimes leads to weird drawing errors (like the final shape being an hourglass shape).
 		
-		/*
-			The draw area is done not via a normalized fraction (0.0 -> 1.0), but is done via direct pixel numbers.  Because of this, since we want to convert over to using a fraction, so that this works on any piece of art, we need to set the `magnitude` value to something appropriate (if it is less than the graphic's dimensions, it's relatively harmless; it just won't fully compress.  However, if it's more than the graphic's dimensions, it'll actually move the x1 value past the x2 one, and we'll essentially get a spatially inverted graphic, which sometimes leads to weird drawing errors (like the final shape being an hourglass shape).
-			
-			As such, we're grabbing the smaller value of img_w and img_h; whichever one won't distort the shape by overflowing.
-		*/
+				As such, we're grabbing the smaller value of img_w and img_h; whichever one won't distort the shape by overflowing.
+			*/
+		
+			) where magnitude = min(me.img_w/2.0, me.img_h/2.0) * object_squish_animation_magnitude * _magnitude_coefficient_for_current_anim",
+		
 			
 		squish_animation_duration: "{ intro: int, outro: int } :: {
 			intro: 10,
@@ -382,7 +384,9 @@
 			set: "[set(_data,value), set_squish_animation_draw_bounds]",
 		},
 
-		trigger_squish_animation: "commands :: 
+		trigger_squish_animation: "def(decimal magnitude) -> commands
+		[
+			set(me._magnitude_coefficient_for_current_anim, magnitude),
 			if(level.cycle - _last_triggered_squish_animation > squish_animation_duration.intro + squish_animation_duration.outro,
 				[
 					set(_last_triggered_squish_animation, level.cycle),
@@ -397,7 +401,8 @@
 						}
 					),
 				]
-			)",
+			)
+		]",
 
 		reverse_squish_animation: "animate(me,
 			{
@@ -406,9 +411,11 @@
 			{
 				duration: squish_animation_duration.outro,
 				easing: lib.math.ease_out_elastic,
+				on_complete: squish_animation_cleanup,
 			}
 		)",
 
+		squish_animation_cleanup: "commands :: null/*set(_magnitude_coefficient_for_current_anim, 1.0)*/",
 
 
 
