--- a/data/object_prototypes/enemies/movable_enemy.cfg
+++ b/data/object_prototypes/enemies/movable_enemy.cfg
@@ -113,6 +113,11 @@ on_collide_feet: "	if(collide_with is obj hittable,
 								attempt_animation('spring', default_anim),
 								set(velocity_y, 0),
 								schedule( 7 + 2, set(velocity_y, -velocity_y/2)),
+								me.trigger_squish_animation( 
+									lib.math.ease_in_sine(
+										lib.math.constrain(0.0, abs(velocity_y / 2000), 1.0)
+									)
+								),
 							],
 							set(velocity_y, 0)
 						)
