--- a/data/objects/experimental/test_squishy_collider.cfg
+++ b/data/objects/experimental/test_squishy_collider.cfg
@@ -13,7 +13,7 @@ id: "test_squishy_collider",
 		
 	},
 
-	on_bounced_on: "[trigger_squish_animation]",
+	on_bounced_on: "[trigger_squish_animation(1.0)]",
 
 
 
