--- a/data/objects/props/furniture/wooden_bed.cfg
+++ b/data/objects/props/furniture/wooden_bed.cfg
@@ -13,14 +13,14 @@ properties: {
 	springiness: 1,
 	spring_amount: 1500,
 	material_sound: "enum padding",
-	_custom_squish_animation_baseline: "decimal :: 0.6",
-	_custom_squish_animation_magnitude: "decimal :: 0.2",
+	object_squish_animation_baseline: "decimal :: 0.6",
+	object_squish_animation_magnitude: "decimal :: 0.2",
 },
 
 on_bounced_on: "[
 	sound('bed-jump'+1d4+'.wav'),
 	sound('footstep-jump-padding'+1d7+'.wav'),
-	trigger_squish_animation,
+	trigger_squish_animation(1.0),
 ]",
 	
 animation: {
