Moved the same bounce logic into the trigger that happens when an object gets jumped on.

--- a/data/object_prototypes/enemies/movable_enemy.cfg
+++ b/data/object_prototypes/enemies/movable_enemy.cfg
@@ -46,13 +46,23 @@ properties: {
 					me.force_death()
 				]",
 #-------------------------- cosmetic motion-distortion stuff --------------------------#
-/*	uses_motion_distortion: "bool :: false",
+/*
+	uses_motion_distortion: "bool :: false",
 	_motion_distorter: {
 		type: "class motion_distort", 
 		persistent: false, 
 		init: "construct('motion_distort', {obj:me})",
-	},*/
+	},
+*/
 	
+
+	object_squish_animation_baseline: "decimal :: 0.6",
+	object_squish_animation_magnitude: "decimal :: 0.6",
+
+	squish_animation_duration: "{ intro: int, outro: int } :: {
+		intro: 7,
+		outro: 15,
+	}",
 
 
 #-------------------------- turning logic --------------------------#
@@ -123,7 +133,13 @@ on_collide_feet: "	if(collide_with is obj hittable,
 						)
 					) where collide_with = arg.collide_with",
 
-on_bounced_on: "[sound('bug-bounce.wav'),attempt_animation('spring', default_anim)]",
+on_bounced_on: "[
+	sound('bug-bounce.wav'),
+	attempt_animation('spring', default_anim),
+	me.trigger_squish_animation( 
+		lib.math.ease_in_sine(1.0)
+	),
+]",
 on_collide_damage: "me.force_death()",
 
 #-------------------------- animation switching --------------------------#
