--- a/data/objects/enemies/bugs/ant_gold.cfg
+++ b/data/objects/enemies/bugs/ant_gold.cfg
@@ -56,9 +56,11 @@ animation: [
 	},
 	{
 		id: "spring",
-		rect: [3,33,27,60],
-		frames: 1,
-		duration: 4,
+		rect: [149,1,173,28],
+		frames: 7,
+		frames_per_row: 1,
+		duration: 2,
+		accel_x: 125,
 	},
 	{
 		id: "turn",
