--- a/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
@@ -18,14 +18,6 @@ properties: {
 	turns_at_cliffs: "false",
 
 
-	object_squish_animation_baseline: "decimal :: 0.6",
-	object_squish_animation_magnitude: "decimal :: 0.6",
-
-	squish_animation_duration: "{ intro: int, outro: int } :: {
-		intro: 7,
-		outro: 15,
-	}",
-
 	
 #-------------------------- vars --------------------------#
 	attack_counter: { type: "int", default: 0 },
@@ -75,8 +67,9 @@ animation: [
 	{
 		id: "spring",
 		rect: [1,1,31,37],
-		frames: 1,
-		duration: 15,
+		frames: 8,
+		frames_per_row: 4,
+		duration: 3,
 		accel_x: 140,
 	},
 	{
