Rendered one of two branch components that, thus far, have only been sketched.

--- a/data/object_prototypes/enemies_general_types/rabbit.cfg
+++ b/data/object_prototypes/enemies_general_types/rabbit.cfg
@@ -20,7 +20,7 @@ properties: {
 	taxonomy: "TaxonomyType :: enum mammal",
 	damage_type: "enum bite",
 	points_value: "10",
-	feet_are_bouncy: "false",
+	feet_are_bouncy: "true",
 	slope_rotation_factor: "0.333",
 	
 	_jump_counter: { type: "int", default: 0 },
