--- a/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
@@ -1,6 +1,6 @@
 {
 id: "mushroom_walker_spawner",
-prototype: ["periodic_mook_holder_and_spawner"],
+prototype: ["periodic_mook_spawner"],
 editor_info: {
 	category: "enemies, general",
 },
@@ -8,24 +8,50 @@ editor_info: {
 hidden_in_game: false,
 zorder: -1,
 properties: {
-#-------------------------- behavior settings --------------------------#
-	spawn_vel: "{x: int, y: int} :: {x: 0, y: -800}",
-	spawn_offset: "{x: int, y: int} :: {x: 0, y: -6}",
-	release_countdown_length: "int :: 200", //how many cycles before the visible ant poking up "pops out" of the hill
 
 #-------------------------- things we must manually override --------------------------#
+	_mook_tracker:	{ type: "class mook_spawning_tracker", init: "construct('mook_spawning_tracker',{this_obj: me, spawnee_types: ['mushroom_walker_green'], max_objects: 3})" },
+
 	valid_spawn_types: "[string] :: ['mushroom_walker_green']",
 	
 	spawn_type: { type: "string", default: "mushroom_walker_green", editor_info: { type: "enum", enum_values: ["mushroom_walker_green"] } },
 
+#-------------------------- vars --------------------------#
+	_spawn_countup: { type: "int", default: 0, persistent: false },
+
+
+#-------------------------- spawn controls --------------------------#
+	max_objects: "10",
+	
+	spawn_frequency: "200",
+
+	custom_setup_logic: "commands :: [
+		set(_mook_tracker.directly_tracks_objects, true)
+	]",
+
+
+#-------------------------- override logic --------------------------#
+	do_spawning_logic: "commands :: [
+		add(_spawn_countup, 1),
+		if(_spawn_countup >= spawn_frequency,
+			[
+				set(_spawn_countup, 0),
+				spawn(spawn_type,
+					mid_x,
+					mid_y,
+					if(1d2=2, 1, -1),
+					[
+						_mook_tracker.register_tracked_object(child),
+					]
+				)
+			]
+		)
+	]",
+
+
+
 },
 
 
 
-animation: {
-	image: "enemies/anthill.png",
-	id: "normal",
-	rect: [1,1,39,33],
-	frames: 1,
-},
 }
