Added a provision for movable enemies to do a custom callback shortly after landing from a fall.  Used it on the green mushrooms to make them pick a random direction after landing, so they fill out the boss scaffolding on the mushroom boss level properly.  Made them 'always active' when spawned by their spawner.

--- a/data/object_prototypes/enemies/movable_enemy.cfg
+++ b/data/object_prototypes/enemies/movable_enemy.cfg
@@ -95,6 +95,8 @@ properties: {
 //										_motion_distorter.process()
 									]",
 	
+	do_after_landing: "def(decimal velocity) -> commands null",
+	
 },
 
 
@@ -120,6 +122,7 @@ on_collide_feet: "	if(collide_with is obj hittable,
 						elastic_collision(collide_with, {multiplier: 1.1, constraint: {min: 50, max: 1000}}),
 						if(abs(velocity_y) > 450 and feet_are_bouncy,
 							[
+								schedule(8, do_after_landing( abs(velocity_y) ) ),
 								attempt_animation('spring', default_anim),
 								set(velocity_y, 0),
 								schedule( 7 + 2, set(velocity_y, -velocity_y/2)),
