--- a/data/object_prototypes/enemies_general_types/ant.cfg
+++ b/data/object_prototypes/enemies_general_types/ant.cfg
@@ -1,3 +1,8 @@
+/*
+Unlike most of the other prototypes, which truly do correspond to their name, 'ant' is a little wider-used than for, strictly-speaking, just ants.  It's used for most walking enemies that have pretty similar turning/etc behavior.  Note that it's not actually used for kitties - those have enough unique responses that we decided to give them their own prototype.
+*/
+
+
 {
 id: "ant",
 prototype: ["movable_enemy"],
