--- a/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_green.cfg
@@ -8,6 +8,7 @@ editor_info: {
 solid_area: [8,17,23,32],
 
 properties: {
+#-------------------------- hittable overrides --------------------------#
 	taxonomy: "TaxonomyType :: enum mushroom",
 	
 	title: "~Fountain Fungus~",
@@ -18,6 +19,8 @@ properties: {
 	turns_at_cliffs: "false",
 
 
+#-------------------------- movable_enemy overrides --------------------------#
+	do_after_landing: "def(decimal velocity) -> commands try_facing( if(1d2=2, 1, -1) )",
 	
 #-------------------------- vars --------------------------#
 	attack_counter: { type: "int", default: 0 },
