--- a/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
@@ -42,6 +42,7 @@ properties: {
 					if(1d2=2, 1, -1),
 					[
 						_mook_tracker.register_tracked_object(child),
+						set(child.always_active, true),
 					]
 				)
 			]
