Tweak the mushroom boss mook spawner to also - if there isn't one already, spawn the bombardier mushroom.

--- a/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
@@ -10,11 +10,14 @@ zorder: -1,
 properties: {
 
 #-------------------------- things we must manually override --------------------------#
-	_mook_tracker:	{ type: "class mook_spawning_tracker", init: "construct('mook_spawning_tracker',{this_obj: me, spawnee_types: ['mushroom_walker_green'], max_objects: 3})" },
+	_mook_tracker:	{ type: "class mook_spawning_tracker", init: "construct('mook_spawning_tracker',{this_obj: me, spawnee_types: ['mushroom_walker_green','mushroom_bombardier'], max_objects: 10})" },
 
 	valid_spawn_types: "[string] :: ['mushroom_walker_green']",
 	
-	spawn_type: { type: "string", default: "mushroom_walker_green", editor_info: { type: "enum", enum_values: ["mushroom_walker_green"] } },
+	_spawned_type: "if( find(level.chars, value is obj mushroom_bombardier) != null,
+						'mushroom_walker_green',
+						'mushroom_bombardier'
+					)",
 
 #-------------------------- vars --------------------------#
 	_spawn_countup: { type: "int", default: 0, persistent: false },
@@ -36,7 +39,7 @@ properties: {
 		if(_spawn_countup >= spawn_frequency,
 			[
 				set(_spawn_countup, 0),
-				spawn(spawn_type,
+				spawn(_spawned_type,
 					mid_x,
 					mid_y,
 					if(1d2=2, 1, -1),
