Set up bombardier mushroom to actually light its fuse and explode.

--- a/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
@@ -11,9 +11,9 @@ properties: {
 #-------------------------- hittable overrides --------------------------#
 	taxonomy: "TaxonomyType :: enum mushroom",
 	
-	title: "~Fountain Fungus~",
-	description: "~Oh, what a day to forget the ol’ bumbershoot at home.~",
-	taste: "~Bubble tea!~",
+	title: "~Bombardier Mushroom~",
+	description: "~Viral marketing research on the catch-phrase 'flavor-bombs' has, at last, culminated in a breakthrough that's sure to blow the market wide open.~",
+	taste: "~Of napalm, in the morning.~",
 	
 	physical_size: "32",
 	turns_at_cliffs: "false",
@@ -24,11 +24,56 @@ properties: {
 	
 #-------------------------- vars --------------------------#
 	attack_counter: { type: "int", default: 0 },
+	
+	
+
+	fuse_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache',
+			mid_x, mid_y, {
+			_particle_type: 'fuse_sparks',
+			parent: me,
+			time_to_die: 50,
+			custom_relative_pos_default: {mid_x: 0, mid_y: -56}
+		})",
+		persistent: false,
+	},	
+#------------------------ exploding behavior ------------------------#	
+
+	explosion_timer: { type: "int", default: 400 },
+	is_on_fire: { type: "bool", default: false },
+
+	light_fuse: "commands :: [
+		add_object(fuse_particles),
+		spawn('sound_source_individual_attache',mid_x,mid_y,{parent:me, sound_file:'fuse-long.ogg'}),
+	]",
+
+	process_fuse_burn: "commands :: if(is_on_fire, [
+		set(explosion_timer, explosion_timer - 1),
+		if(explosion_timer <= 0, 
+			force_death(enum fire)
+		),
+	])",
+	
+	
+	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands [
+		if(damage_type = enum fire,
+			if(not is_on_fire, [
+				set(is_on_fire, true),
+				light_fuse,
+			])
+		)
+	]",
+	
+	death_effects: "def(string type) -> commands [
+		spawn('explosion_huge_harmful',midpoint_x,midpoint_y,facing),
+		sound('BombExplode.wav'),	
+	]",
 },
 
 hitpoints: 200,
 
-
+on_process: "process_fuse_burn",
 
 on_timer: "[set(rotate, slope_standing_on/3), if(is_standing and animation in ['walk','run'] and (should_turn_away_from_cliff or should_turn_towards_player),turn_around,null)]",
 
@@ -80,8 +125,8 @@ animation: [
 		rect: [1,1,65,64],
 		frames: 8,
 		frames_per_row: 4,
-		accel_x: 360,
-		duration: 5,
+		accel_x: 260,
+		duration: 6,
 	},
 ],
 }
