--- a/data/object_prototypes/general/sound_source.cfg
+++ b/data/object_prototypes/general/sound_source.cfg
@@ -258,6 +258,11 @@ properties: {
 			distance_attenuation_function: "@eval enum inverse",
 			falloff_distance: 150,
 		},
+		'fuse-long.ogg': {
+			sound_volume_max: 1,
+			distance_attenuation_function: "@eval enum inverse",
+			falloff_distance: 600,
+		},
 	}, set: "null /*cannot set this, is immutable!*/" },
 	
 	sound_fade_duration: "15", 			//Fade in/out frame duration.
